# collectd-zeromq

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.in
m4/: check_collectd.m4
src/: Makefile.am  zeromq.c  zeromq.h  zeromq_borrowed.c
